# c-printer

./: .cspell.json  .gitignore  CMakeLists.txt  Makefile  README.md  main.cpp  技术难点.md
files/: test.docx  test.js  test.md  test.pptx  test.txt  test.xlsx
include/: FileConverter.h  FileSelecter.h  FileSelector.h  PrintJob.h  PrintJobHandler.h  PrinterDiscovery.h  PrinterManager.h  Utils.h
project/: FileSelecter.cpp  FileSelecter2.cpp  PDFConverter.cpp  PDFConverter.h  PDFConverter2.cpp  PDFConverter2.h  PrintJob.cpp  PrintJob.h  PrinterManager.cpp  PrinterManager.h  file_selector  fs  main.cpp  pja  test  test.cpp  testfc.cpp  utils.cpp  utils.h
project2/: main.cpp  printer_manager.cpp
src/: FileConverter.cpp  FileConverter2.cpp  FileSelecter.cpp  FileSelector.cpp  OSAdapter.cpp  OSAdapter.h  PDFConverter.cpp  PrintJobHandler.cpp  PrinterDiscovery.cpp  PrinterDiscovery3.cpp  PrinterManager.cpp  Utils.cpp  macPrinterDiscovery  macPrinterDiscovery.cpp  main.cpp
src/macPrinterDiscovery.dSYM/Contents/: Info.plist
src/macPrinterDiscovery.dSYM/Contents/Resources/DWARF/: macPrinterDiscovery
src/macPrinterDiscovery.dSYM/Contents/Resources/Relocations/aarch64/: macPrinterDiscovery.yml
util/: StringConverter.cpp  StringConverter.h
